--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Pirata+One&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -5,18 +6,43 @@
           box-sizing: border-box;
 }
 
+.pirata-one-regular {
+  font-family: "Pirata One", system-ui;
+  font-weight: 400;
+  font-style: normal;
+}
+
 html, body {
   height: 100%;
-  width: 100%;
   margin: 0;
   padding: 0;
 }
 
 body {
-  min-height: 100%;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  min-height: 100vh;
+}
+
+.backGroundMain {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 header {
+  font-family: "Pirata One", cursive;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -30,37 +56,59 @@ header {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  background-color: rgba(26, 26, 26, 0.7);
+  color: #f0e6d2;
+  padding: 15px 0;
 }
 header .logo h1 {
   text-align: center;
-  font-size: 3rem;
-  letter-spacing: 2px;
+  font-size: 4rem;
+  letter-spacing: 5px;
   pointer-events: none;
+  font-weight: 500;
 }
 header .logo h2 {
-  font-size: 1rem;
+  font-size: 1.5rem;
   pointer-events: none;
+  letter-spacing: 2px;
+  font-weight: 200;
 }
 
 main {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding: 40px 20px;
 }
 main .wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: rgba(26, 26, 26, 0.7);
+  height: 100%;
   max-width: 1200px;
-  margin: 0 auto;
-  background: darkgray;
+  padding: 40px 20px;
+  gap: 30px;
 }
 main .wrapper .gameStartContainer {
   display: -webkit-box;
@@ -76,8 +124,6 @@ main .wrapper .gameStartContainer {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 100%;
-  height: 100%;
 }
 main .wrapper .battleFieldContainer {
   display: -webkit-box;
@@ -99,4 +145,53 @@ main .wrapper .battleFieldContainer .battleField {
   min-height: 200px;
   min-width: 200px;
   background-color: cornflowerblue;
+}
+main .wrapper .color-palette {
+  display: -ms-grid;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
+  gap: 16px;
+  max-width: 500px;
+  margin: auto;
+}
+main .wrapper .color-block {
+  border-radius: 12px;
+  padding: 20px;
+  text-align: center;
+  color: #fff;
+  font-size: 14px;
+  font-weight: bold;
+  -webkit-box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+}
+main .wrapper .color-1 {
+  background-color: #153d3c;
+}
+main .wrapper .color-2 {
+  background-color: #1b6c7e;
+}
+main .wrapper .color-3 {
+  background-color: #2f8e8b;
+}
+main .wrapper .color-4 {
+  background-color: #0b1a1a;
+}
+main .wrapper .color-5 {
+  background-color: #3a5557;
+}
+main .wrapper .color-6 {
+  background-color: #1a1a1a;
+}
+main .wrapper .color-7 {
+  background-color: #c9a66b;
+}
+
+footer {
+  text-align: center;
+  padding: 15px;
+  background-color: rgba(26, 26, 26, 0.7);
+  color: #f0e6d2;
+  font-size: 14px;
+  font-family: "Pirata One", cursive;
+  letter-spacing: 1px;
 }
