--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -158,32 +158,19 @@ main .wrapper .shipsContainer {
 main .wrapper .shipsContainer .ships-palette {
   display: -ms-grid;
   display: grid;
-  max-height: 400px;
+  height: 408px;
+  width: 220px;
   grid-auto-flow: row;
   grid-template-columns: repeat(auto-fit, minmax(170px, auto));
   gap: 20px;
   padding: 20px;
+  overflow-x: hidden;
   overflow-y: auto;
   border: 4px solid #0b1a1a;
   background-color: rgba(26, 26, 26, 0.7);
   border-radius: 8px;
-}
-main .wrapper .navigation {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 2;
-  grid-column: 2/4;
-  -ms-grid-row: 2;
-  -ms-grid-row-span: 1;
-  grid-row: 2/3;
+  scrollbar-width: thin;
+  scrollbar-color: #1a1a1a transparent;
 }
 main .wrapper .ship {
   display: -webkit-box;
@@ -195,13 +182,14 @@ main .wrapper .ship {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  border: 1px solid #2f8e8b;
-  border-radius: 8px;
-  margin-bottom: 30px;
+  border: 1px solid #2d9793;
+  border-radius: 5px;
   cursor: -webkit-grab;
   cursor: grab;
-  -webkit-transition: height 0.2s linear, width 0.3s linear 0.1s, scale 0.3s ease-out;
-  transition: height 0.2s linear, width 0.3s linear 0.1s, scale 0.3s ease-out;
+  -webkit-transition: height 0.2s linear, width 0.3s linear 0.1s, scale 0.3s ease-out, -webkit-box-shadow 0.2s linear;
+  transition: height 0.2s linear, width 0.3s linear 0.1s, scale 0.3s ease-out, -webkit-box-shadow 0.2s linear;
+  transition: height 0.2s linear, width 0.3s linear 0.1s, scale 0.3s ease-out, box-shadow 0.2s linear;
+  transition: height 0.2s linear, width 0.3s linear 0.1s, scale 0.3s ease-out, box-shadow 0.2s linear, -webkit-box-shadow 0.2s linear;
 }
 main .wrapper .ship img {
   width: 100%;
@@ -290,9 +278,9 @@ main .wrapper .ship.vertical[data-length="2"] img {
   transition: transform 0.3s linear, width 0.3s linear 0.2s, -webkit-transform 0.3s linear;
 }
 main .wrapper .ship:hover {
-  -webkit-box-shadow: inset 0 0 15px rgba(47, 142, 139, 0.9), 0 0 25px rgba(47, 142, 139, 0.9);
-          box-shadow: inset 0 0 15px rgba(47, 142, 139, 0.9), 0 0 25px rgba(47, 142, 139, 0.9);
-  scale: 1.2;
+  -webkit-box-shadow: inset 0 0 15px rgba(45, 151, 147, 0.4), 0 0 25px rgba(45, 151, 147, 0.4);
+          box-shadow: inset 0 0 15px rgba(45, 151, 147, 0.4), 0 0 25px rgba(45, 151, 147, 0.4);
+  scale: 1.1;
 }
 main .wrapper .ship.dragging {
   opacity: 0.8;
@@ -318,6 +306,7 @@ main .wrapper .grid-container {
   -webkit-box-sizing: content-box;
           box-sizing: content-box;
   border: 4px solid #0b1a1a;
+  border-radius: 5px;
   position: relative;
 }
 main .wrapper .grid-container > *:nth-child(1) {
@@ -726,8 +715,8 @@ main .wrapper .grid-cell {
   border: 1px solid grey;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  -webkit-transition: background-color 0.2s;
-  transition: background-color 0.2s;
+  -webkit-transition: background-color 0.3s linear;
+  transition: background-color 0.3s linear;
   background-color: rgba(26, 26, 26, 0.7);
 }
 main .wrapper .grid-cell.drag-over {
@@ -773,44 +762,45 @@ main .wrapper .grid-cell.ai-hit {
 main .wrapper .grid-cell.ai-miss {
   background-color: transparent;
 }
-main .wrapper .color-palette {
-  display: -ms-grid;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
-  gap: 16px;
-  max-width: 900px;
-  margin: auto;
+main .wrapper .navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 2;
+  grid-column: 2/4;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2/3;
 }
-main .wrapper .color-block {
-  border-radius: 12px;
-  padding: 20px;
-  text-align: center;
-  color: #fff;
-  font-size: 14px;
-  font-weight: bold;
-  -webkit-box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-          box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+main .wrapper .navigation .start-button {
+  font-family: "Pirata One", cursive;
+  font-size: 2rem;
+  padding: 7px 15px;
+  border: 3px solid #2d9793;
+  border-radius: 15px;
+  color: #47c1be;
+  background-color: rgba(11, 26, 26, 0.7);
+  cursor: pointer;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
-main .wrapper .color-1 {
-  background-color: #153d3c;
+main .wrapper .navigation .start-button:hover {
+  border-color: #c9a66b;
+  color: #c9a66b;
+  -webkit-box-shadow: inset 0 0 15px rgba(45, 151, 147, 0.9);
+          box-shadow: inset 0 0 15px rgba(45, 151, 147, 0.9);
 }
-main .wrapper .color-2 {
-  background-color: #1b6c7e;
-}
-main .wrapper .color-3 {
-  background-color: #2f8e8b;
-}
-main .wrapper .color-4 {
-  background-color: #0b1a1a;
-}
-main .wrapper .color-5 {
-  background-color: #3a5557;
-}
-main .wrapper .color-6 {
-  background-color: #1a1a1a;
-}
-main .wrapper .color-7 {
-  background-color: #c9a66b;
+main .wrapper .navigation .start-button:disabled {
+  color: #ccc;
+  cursor: not-allowed;
+  opacity: 0.6;
 }
 
 footer {
