--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  user-select: none;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Pirata+One&display=swap');
@@ -18,7 +19,7 @@ $color-bg: #1a1a1a; // фон (напів прозорий для текстов
 $color-gold: #c9a66b; // Золотий відтінок
 
 $color-1: #153d3c; // тёмно-бирюзовый
-$color-2: #1b6c7e; // морской синий
+$color-2: #42acca; // морской синий
 $color-3: #38c1bc; // бирюзово-синий
 $color-4: #0b1a1a; // глубокий морской
 $color-5: #3a5557; // серо-синий
@@ -32,12 +33,6 @@ $color-5: #3a5557; // серо-синий
 
 @mixin background-overlay($color, $alpha) {
   background-color: rgba($color, $alpha);
-}
-
-@mixin ship-size($size) {
-  width: $size * 40px;
-  height: 40px;
-  filter: drop-shadow(10px 10px 10px rgba(0, 0, 0, 0.5));
 }
 
 html, body {
@@ -85,7 +80,6 @@ header {
       pointer-events: none;
       letter-spacing: 2px;
       font-weight: 200;
-
     }
   }
 }
@@ -97,20 +91,67 @@ main {
   justify-content: center;
   align-items: center;
   padding: 40px 20px;
+  .modal {
+    position: absolute;
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    z-index: 30;
+    opacity: 0;
+    transition: all 1s ease;
+
+
+    @include background-overlay($color-bg, 0.7);
+    .modal-content {
+      position: relative;
+      font-family: 'Pirata One', cursive;
+      letter-spacing: 2px;
+      font-size: 2rem;
+      @include background-overlay($color-bg, 0.9);
+      color: $color-3;
+      margin: 15% auto;
+      padding: 30px;
+      width: 300px;
+      text-align: center;
+      border-radius: 8px;
+      box-shadow: 0 0 100px 30px rgba($color-3, 0.8);
+      border: 4px solid $color-3;
+
+      .close {
+        position: absolute;
+        top: 0;
+        right: 10px;
+        color: $MainText-color;
+        font-size: 25px;
+        font-weight: bold;
+        cursor: pointer;
+      }
+      .close:hover {
+        color: $color-3;
+      }
+    }
+
+  }
 
   .wrapper {
     display: grid;
-    grid-template-columns: 200px 1fr 200px;
-    grid-template-rows: 460px 100px;
-    column-gap: 30px;
+    grid-template-columns: 200px 1fr 1fr 200px;
+    grid-template-rows: 1fr 50px 100px;
+    column-gap: 25px;
+    align-items: start;
+    justify-items: center;
     //@include background-overlay($color-bg, 0.7);
+
 
 
     .ships-palette {
       position: relative;
       display: grid;
       height: 408px;
-      width: 220px;
+      width: 200px;
       grid-auto-flow: row;
       grid-template-columns: repeat(auto-fit, minmax(170px, auto));
       gap: 20px;
@@ -123,11 +164,14 @@ main {
       border-radius: 8px;
       scrollbar-width: thin;
       scrollbar-color: $color-bg transparent;
-      transition: width 0.3s linear .3s, opacity 0.6s ease-in .2s, height 0.6s linear;
+      transition: width 0.3s linear .6s, opacity 0.4s ease-in .6s, height 0.6s linear;
       grid-column: 1 / 2;
-      grid-row: 1 / 3;
+      grid-row: 1 / 2;
 
       .tip {
+        font-family: 'Pirata One', cursive;
+        font-weight: 100;
+        letter-spacing: 1px;
         position: sticky;
         display: flex;
         flex-direction: row;
@@ -136,6 +180,7 @@ main {
         padding: 5px;
         gap: 7px;
         top: 0;
+        height: 30px;
         border-radius: 4px;
         color: $color-gold;
         @include background-overlay($color-bg, 0.95);
@@ -152,12 +197,42 @@ main {
 
     }
 
+    .grid-container {
+      display: grid;
+      grid-template-columns: repeat(10, 40px);
+      grid-template-rows: repeat(10, 40px);
+      width: 400px;
+      height: 400px;
+      box-sizing: content-box;
+      border: 4px solid $color-4;
+      border-radius: 5px;
+      position: relative;
+      transition: all 0.3s ease-in-out;
+      margin-bottom: 10px;
+    }
+
+    .player-grid {
+      grid-column: 2 / 3;
+      grid-row: 1 / 2;
+    }
+
+    .enemy-grid {
+      grid-column: 3 / 4;
+      grid-row: 1 / 2;
+      pointer-events: none;
+    }
+
+    .active {
+      box-shadow: 0 0 20px 15px rgba($color-3, 0.8);
+      border: 4px solid $color-3;
+    }
+
 
     .ship {
       display: flex;
       align-items: center;
       justify-content: center;
-      border: 1px solid $color-gold;
+      //border: 1px solid $color-gold;
       border-radius: 5px;
       //box-sizing: content-box;
       //padding: 10px;
@@ -169,7 +244,7 @@ main {
         width: 100%;
         height: 100%;
         pointer-events: none;
-        filter: drop-shadow(10px 5px 5px rgba(0, 0, 0, 0.5));
+        filter: drop-shadow(10px 6px 5px rgba(0, 0, 0, 0.8));
         transform-origin: center;
         transition: transform .3s linear, width .2s linear .1s;
         object-fit: contain;
@@ -185,16 +260,19 @@ main {
     .ship[data-length="3"] {
       width: 120px;
       height: 40px;
+      margin-left: 10px;
     }
 
     .ship[data-length="2"] {
       width: 80px;
       height: 40px;
+      margin-left: 30px;
     }
 
     .ship[data-length="1"] {
       width: 40px;
       height: 40px;
+      margin-left: 50px;
     }
 
     .ship.vertical[data-length="4"] {
@@ -247,10 +325,6 @@ main {
       scale: 1.1;
     }
 
-    //.ship:active {
-    //  box-shadow: inset 0 0 13px rgba($color-2, 0.8), 0 0 13px rgba($color-2, 0.8);
-    //}
-
     .ship.dragging {
       opacity: 0.8;
       cursor: grabbing;
@@ -260,50 +334,139 @@ main {
       position: absolute;
       box-shadow: none;
       cursor: default;
+      margin-left: 0;
       z-index: 10;
     }
 
-    .grid-wrapper {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      grid-template-rows: auto 50px;
-      column-gap: 20px;
-      row-gap: 5px;
-      align-items: start;
-      justify-items: center;
 
-      .grid-container {
-        display: grid;
-        grid-template-columns: repeat(10, 40px);
-        grid-template-rows: repeat(10, 40px);
-        width: 400px;
-        height: 400px;
-        box-sizing: content-box;
-        border: 4px solid $color-4;
-        border-radius: 5px;
-        position: relative;
+    .auto-place-button {
+      font-family: 'Pirata One', cursive;
+      color: $color-gold;
+      @include background-overlay($color-bg, 0.9);
+      border: 1px solid $color-gold;
+      border-radius: 5px;
+      font-weight: 100;
+      letter-spacing: 1px;
+      padding: 5px 10px;
+      width: auto;
+      height: auto;
+      cursor: pointer;
+      transition: scale .3s linear;
+      grid-column: 2 / 3;
+      grid-row: 2 / 3;
+
+      &:active {
+        scale: 0.85;
       }
 
-      .enemy-grid {
-        pointer-events: none;
+      &:disabled {
+        color: #ccc;
+        cursor: not-allowed;
+        opacity: 0.6;
+        border-color: #ccc;
+        box-shadow: inset 0 0 15px rgba(#ccc, 0.2);
       }
+    }
 
-      .auto-place-button {
-        font-family: 'Pirata One', cursive;
-        color: $color-gold;
-        @include background-overlay($color-bg, 0.9);
-        border: 1px solid $color-gold;
-        border-radius: 5px;
-        font-weight: 100;
+    .aiContainer {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-around;
+      grid-column: 3 / 4;
+      grid-row: 2 / 3;
+      gap: 8px;
+      color: $MainText-color;
+
+      span:nth-child(1) {
         letter-spacing: 1px;
-        padding: 5px 10px;
-        width: auto;
-        height: auto;
+        font-size: 18px;
+        width: 50px;
+        text-align: center;
+        font-weight: 100;
+        color: $color-gold;
+        background-color: $color-bg;
+        padding: 4px 10px;
+        border-radius: 4px;
+      }
+
+      .ai_switch {
+        position: relative;
+        display: inline-block;
+        width: 46px;
+        height: 26px;
+        user-select: none;
+
+
+        input {
+          opacity: 0;
+          width: 0;
+          height: 0;
+        }
+
+        .slider {
+          position: absolute;
+          cursor: pointer;
+          box-shadow: 0 0 0 2px rgba($color-bg, 1);
+          border-radius: 5px;
+          top: 0;
+          left: 0;
+          right: 0;
+          bottom: 0;
+          transition: 0.4s;
+          box-sizing: content-box;
+
+          &::before {
+            content: "";
+            position: absolute;
+            height: 20px;
+            width: 20px;
+            left: 3px;
+            bottom: 3px;
+            background-color: $color-bg;
+            transition: 0.4s;
+            border-radius: 3px;
+          }
+        }
+
+        input:checked + .slider {
+          background-color: $color-gold;
+        }
+
+        input:checked + .slider::before {
+          transform: translateX(20px);
+        }
+      }
+    }
+
+
+    .navigation {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      grid-column: 2 / 4;
+      grid-row: 3 / 4;
+
+      .start-button {
+        font-family: 'Pirata One', cursive;
+        font-size: 2rem;
+        padding: 7px 15px;
+        border: 3px solid $color-3;
+        //border-image: linear-gradient(to right, transparent, $color-3, transparent) 1;
+        border-radius: 15px;
+        color: #8cdad8;
+        @include background-overlay($color-4, 0.7);
         cursor: pointer;
-        transition: scale .3s linear;
+        transition: all .3s ease-in-out, scale .1s ease-in;
+
+        &:hover {
+          border-color: $color-gold;
+          color: $color-gold;
+          box-shadow: inset 0 0 15px rgba($color-3, 0.9);
+        }
 
         &:active {
-          scale: 0.85;
+          scale: 0.9;
         }
 
         &:disabled {
@@ -313,9 +476,12 @@ main {
           border-color: #ccc;
           box-shadow: inset 0 0 15px rgba(#ccc, 0.2);
         }
+
       }
 
+
     }
+
 
     .grid-cell {
       width: 40px;
@@ -367,54 +533,15 @@ main {
       background-color: transparent;
     }
 
-    .navigation {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      grid-column: 2 / 3;
-      grid-row: 2 / 3;
 
-      .start-button {
-        font-family: 'Pirata One', cursive;
-        font-size: 2rem;
-        padding: 7px 15px;
-        border: 3px solid $color-3;
-        //border-image: linear-gradient(to right, transparent, $color-3, transparent) 1;
-        border-radius: 15px;
-        color: #8cdad8;
-        @include background-overlay($color-4, 0.7);
-        cursor: pointer;
-        transition: all .3s ease-in-out, scale .1s ease-in;
-
-        &:hover {
-          border-color: $color-gold;
-          color: $color-gold;
-          box-shadow: inset 0 0 15px rgba($color-3, 0.9);
-        }
-
-        &:active {
-          scale: 0.9;
-        }
-
-        &:disabled {
-          color: #ccc;
-          cursor: not-allowed;
-          opacity: 0.6;
-          border-color: #ccc;
-          box-shadow: inset 0 0 15px rgba(#ccc, 0.2);
-        }
-
-      }
-
-
-    }
   }
+
 }
 
 footer {
   text-align: center;
   padding: 15px;
-  @include background-overlay($color-bg, 0.6);
+  @include background-overlay($color-bg, 0.7);
   color: $MainText-color;
   font-size: 14px;
   font-family: 'Pirata One', cursive;
